2017-12-10  Iain Buclaw  <ibuclaw@gdcproject.org>

	* d-codegen.cc (build_alignment_field): Set DECL_PADDING_P and
	DECL_FIELD_CONTEXT on generated fields.
	(build_struct_literal): Use build_zero_cst to generate padding.
	* decl.cc (build_type_decl): Set public and decl assembler name.

2017-12-10  Iain Buclaw  <ibuclaw@gdcproject.org>

	* types.cc (TypeVisitor::visit(TypeClass)): Check for duplicate
	declarations before adding method.

2017-12-09  Iain Buclaw  <ibuclaw@gdcproject.org>

	* expr.cc (ExprVisitor::visit(AddrExp)): Build internal struct literal
	symbol before generating its initializer.

2017-12-09  Iain Buclaw  <ibuclaw@gdcproject.org>

	* d-lang.cc (d_parse_file): Set first_global_object_name.

2017-12-09  Iain Buclaw  <ibuclaw@gdcproject.org>

	* lang.opt (fmodule-filepath=): Rename to fmodule-file.
	* d-lang.cc (d_handle_option): Update case for OPT_fmodule_file_.

2017-12-09  Iain Buclaw  <ibuclaw@gdcproject.org>

	* d-tree.h (CALL_EXPR_ARGS_ORDERED): Define.
	* d-codegen.cc (d_build_call): Set CALL_EXPR_ARGS_ORDERED for
	functions with D linkage.
	* d-lang.cc (d_gimplify_expr): Handle CALL_EXPR_ARGS_ORDERED.

2017-12-09  Eugene Wissner  <belka@caraus.de>

	* toir.cc (IRVisitor::visit(SwitchStatement)): Set SWITCH_ALL_CASES_P on
	switch statements. Set SWITCH_BREAK_LABEL_P on the artificial label
	created for break statements from a switch.

2017-12-04  Eugene Wissner  <belka@caraus.de>

	* toir.cc (IRVisitor::visit(SwitchStatement)): Build SWITCH_EXPR using build2 instead
	of build3.

2017-11-14  Eugene Wissner  <belka@caraus.de>

	* decl.cc (finish_thunk): Drop frequency argument from
	symbol_table::create_edge.
	* d-lang.cc (d_post_options): Set default value of
	-Wreturn-type to false.

2017-11-11  Iain Buclaw  <ibuclaw@gdcproject.org>

	* d-codegen.cc (build_float_cst): Remove float rounding check.
	* d-longdouble.cc (longdouble::to_int): Don't round floats before int
	conversion.
	* expr.cc (ExprVisitor::binary_op): Handle excess precision.