@@ -1,3 +1,8 @@
+2017-12-17  Iain Buclaw  <ibuclaw@gdcproject.org>
+
+	* decl.cc (get_symbol_decl): Mark templates as extern if not located
+	in a module being compiled.
+
 2017-12-10  Iain Buclaw  <ibuclaw@gdcproject.org>
 
 	* d-codegen.cc (build_alignment_field): Set DECL_PADDING_P and
